<resources>
    <string name="app_name">Calc gasto de viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">Kms por Litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="calcular">CALCULAR</string>
    <string name="valor_total_RS">R$ 0</string>
    <string name="preencha_tudo">Preencha todos os campos!</string>
    <string name="info_valor_correto">Informe valores válidos!</string>
</resources>